--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <parent>
         <groupId>net.leanix.poms</groupId>
-        <artifactId>common-parent</artifactId>
+        <artifactId>java8-parent</artifactId>
         <version>0.8.1</version>
         <relativePath />
     </parent>
@@ -123,4 +123,13 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
