--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>leanix-swagger-ui</artifactId>
     <packaging>jar</packaging>
 
-    <version>0.1.6</version>
+    <version>0.1.7-SNAPSHOT</version>
 
     <name>leanix-swagger-ui</name>
     <description>Provides the assets for the swagger GUI of leanix services</description>
