--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,32 @@
         <version>2.0.1</version>
         <relativePath />
     </parent>
+
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <!-- sepcifies a dropwizard version, required for helper class to spin up the servlet, which can be changed inside the final 
+            micorservice -->
+        <dropwizard.version>1.3.15</dropwizard.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-bom</artifactId>
+                <version>${dropwizard.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-assets</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
